Rebase and minor code updates according to code reviews.