@@ -3,8 +3,8 @@ package de.tum.in.www1.artemis.metis;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -16,8 +16,10 @@ import org.springframework.util.LinkedMultiValueMap;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationBambooBitbucketJiraTest;
 import de.tum.in.www1.artemis.domain.Course;
+import de.tum.in.www1.artemis.domain.enumeration.SortingOrder;
 import de.tum.in.www1.artemis.domain.metis.AnswerPost;
 import de.tum.in.www1.artemis.domain.metis.Post;
+import de.tum.in.www1.artemis.domain.metis.PostSortCriterion;
 import de.tum.in.www1.artemis.repository.metis.AnswerPostRepository;
 
 public class AnswerPostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
@@ -37,6 +39,8 @@ public class AnswerPostIntegrationTest extends AbstractSpringIntegrationBambooBi
 
     private Long courseId;
 
+    private static final int MAX_POSTS_PER_PAGE = 20;
+
     @BeforeEach
     public void initTestCase() {
 
@@ -44,22 +48,20 @@ public class AnswerPostIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // initialize test setup and get all existing posts with answers (three posts, one in each context, are initialized with one answer each): 3 answers in total (with author
         // student1)
-        existingPostsWithAnswers = database.createPostsWithAnswerPostsWithinCourse().stream().filter(coursePost -> (coursePost.getAnswers() != null)).collect(Collectors.toList());
+        existingPostsWithAnswers = database.createPostsWithAnswerPostsWithinCourse().stream().filter(coursePost -> (coursePost.getAnswers() != null)).toList();
 
         // get all answerPosts
-        existingAnswerPosts = existingPostsWithAnswers.stream().map(Post::getAnswers).flatMap(Collection::stream).collect(Collectors.toList());
+        existingAnswerPosts = existingPostsWithAnswers.stream().map(Post::getAnswers).flatMap(Collection::stream).toList();
 
         // get all existing posts with answers in exercise context
-        existingPostsWithAnswersInExercise = existingPostsWithAnswers.stream().filter(coursePost -> (coursePost.getAnswers() != null) && coursePost.getExercise() != null)
-                .collect(Collectors.toList());
+        existingPostsWithAnswersInExercise = existingPostsWithAnswers.stream().filter(coursePost -> (coursePost.getAnswers() != null) && coursePost.getExercise() != null).toList();
 
         // get all existing posts with answers in lecture context
-        existingPostsWithAnswersInLecture = existingPostsWithAnswers.stream().filter(coursePost -> (coursePost.getAnswers() != null) && coursePost.getLecture() != null)
-                .collect(Collectors.toList());
+        existingPostsWithAnswersInLecture = existingPostsWithAnswers.stream().filter(coursePost -> (coursePost.getAnswers() != null) && coursePost.getLecture() != null).toList();
 
         // get all existing posts with answers in lecture context
         existingPostsWithAnswersCourseWide = existingPostsWithAnswers.stream().filter(coursePost -> (coursePost.getAnswers() != null) && coursePost.getCourseWideContext() != null)
-                .collect(Collectors.toList());
+                .toList();
 
         courseId = existingPostsWithAnswersInExercise.get(0).getExercise().getCourseViaExerciseGroupOrCourseMember().getId();
     }
@@ -157,10 +159,69 @@ public class AnswerPostIntegrationTest extends AbstractSpringIntegrationBambooBi
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         // get posts of current user and compare
         List<Post> resolvedPosts = existingPostsWithAnswers.stream()
-                .filter(post -> post.getAnswers().stream().allMatch(answerPost -> answerPost.doesResolvePost() == null || answerPost.doesResolvePost() == false))
-                .collect(Collectors.toList());
+                .filter(post -> post.getAnswers().stream().allMatch(answerPost -> answerPost.doesResolvePost() == null || answerPost.doesResolvePost() == false)).toList();
 
         assertThat(returnedPosts).isEqualTo(resolvedPosts);
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testGetPostsForCourse_WithOwnAndUnresolvedPosts() throws Exception {
+        // filterToOwn & filterToUnresolved set true; will fetch all unresolved posts of current user
+        var params = new LinkedMultiValueMap<String, String>();
+        params.add("filterToUnresolved", "true");
+        params.add("filterToOwn", "true");
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        // get unresolved posts of current user and compare
+        List<Post> resolvedPosts = existingPostsWithAnswers.stream().filter(post -> post.getAuthor().getLogin().equals("student1")
+                && (post.getAnswers().stream().allMatch(answerPost -> answerPost.doesResolvePost() == null || answerPost.doesResolvePost() == false))).toList();
+
+        assertThat(returnedPosts).isEqualTo(resolvedPosts);
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testGetPostsForCourse_OrderByAnswerCountDESC() throws Exception {
+        PostSortCriterion sortCriterion = PostSortCriterion.ANSWER_COUNT;
+        SortingOrder sortingOrder = SortingOrder.DESCENDING;
+
+        var params = new LinkedMultiValueMap<String, String>();
+
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", sortCriterion.toString());
+        params.add("sortingOrder", sortingOrder.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        existingPostsWithAnswers = existingPostsWithAnswers.stream().sorted(Comparator.comparing((Post post) -> post.getAnswers().size()).reversed()).toList();
+
+        assertThat(returnedPosts).isEqualTo(existingPostsWithAnswers);
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testGetPostsForCourse_OrderByAnswerCountASC() throws Exception {
+        PostSortCriterion sortCriterion = PostSortCriterion.ANSWER_COUNT;
+        SortingOrder sortingOrder = SortingOrder.ASCENDING;
+
+        var params = new LinkedMultiValueMap<String, String>();
+
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", sortCriterion.toString());
+        params.add("sortingOrder", sortingOrder.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        existingPostsWithAnswers = existingPostsWithAnswers.stream().sorted(Comparator.comparing(post -> post.getAnswers().size())).toList();
+
+        assertThat(returnedPosts).isEqualTo(existingPostsWithAnswers);
     }
 
     // UPDATE
